<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alacey.plantid.beginFlower"
    android:id="@+id/beginFlowerTop"
    android:onClick="onHomeButtonClick"
    android:nestedScrollingEnabled="true">

    <TextView android:text="@string/beginFlower1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/beginFlowerText1"
        android:layout_marginTop="112dp"
        android:textSize="30sp"
        android:fontFamily="sans-serif-light"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#454545" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beginFlower2"
        android:layout_below="@+id/beginFlowerText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:id="@+id/flower2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beginFlower3"
        android:id="@+id/flower3"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/flower2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beginFlower4"
        android:id="@+id/button5"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/flower3"
        android:layout_centerHorizontal="true"
        android:onClick="wildflower" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startOver"
        android:id="@+id/button6"
        android:textSize="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
