<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alacey.plantid.wildflower">

    <TextView android:text="@string/wildflower1" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wildflowerText"
        android:layout_marginTop="112dp"
        android:textSize="24sp"
        android:fontFamily="sans-serif-light"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#454545" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wildflower2"
        android:layout_below="@+id/wildflowerText"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="37dp"
        android:id="@+id/wildflower2"
        android:onClick="regular" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wildflower3"
        android:id="@+id/wildflower3"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-light"
        android:layout_below="@+id/wildflower2"
        android:layout_centerHorizontal="true"
        android:onClick="irregular" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wildflower4"
        android:fontFamily="sans-serif-light"
        android:layout_marginBottom="73dp"
        android:text="@string/beginTree4"
        android:clickable="true"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:background="#00ffffff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startOver"
        android:id="@+id/button6"
        android:textSize="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onHomeButtonClick" />


</RelativeLayout>
