<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alacey.plantid.beginID"
    android:nestedScrollingEnabled="false"
    android:gravity="center_horizontal">

    <TextView android:text="@string/beginID_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:textSize="30sp"
        android:fontFamily="sans-serif-light"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beginID_line2"
        android:id="@+id/button_a"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:clickable="true"
        android:background="@drawable/button_default"
        android:onClick="beginFlower"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beginID_line3"
        android:id="@+id/button_b"
        android:clickable="true"
        android:fontFamily="sans-serif-light"
        android:onClick="beginTree"
        android:layout_below="@+id/button_a"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="20sp" />

</RelativeLayout>
