 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeScreen"
    android:clickable="false">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="141dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_line1"
        android:layout_marginTop="42dp"
        android:text="@string/subtitle1"
        android:fontFamily="sans-serif-light"
        android:textSize="23sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:paddingBottom="0dp"
        android:textColor="#484848" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_line2"
        android:text="@string/subtitle2"
        android:fontFamily="sans-serif-light"
        android:textSize="23sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/home_line1"
        android:paddingTop="0dp"
        android:textColor="#484848" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Identifying"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:fontFamily="sans-serif-light"
        android:textColor="#2e2e2e"
        android:clickable="true"
        android:backgroundTint="#e3e0e0"
        android:onClick="beginID"
        android:singleLine="false"
        android:textSize="16dp" />


</RelativeLayout>
